Address to coordinate

--- a/GeoNotify/GeoNotify/Base.lproj/Main.storyboard
+++ b/GeoNotify/GeoNotify/Base.lproj/Main.storyboard
@@ -75,42 +75,101 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="AIK-dC-0gi">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                             </mapView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Address" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="bq6-bQ-q15">
+                                <rect key="frame" x="-25" y="-30" width="97" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Agu-Si-HdC">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Bx-73-SVo">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="p3G-uZ-MZ7"/>
+                                </constraints>
+                                <state key="normal" title="OK"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="p3G-uZ-MZ7"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="p3G-uZ-MZ7"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="btnPin:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="owB-M0-70A"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="9Bx-73-SVo" firstAttribute="leading" secondItem="bq6-bQ-q15" secondAttribute="trailing" constant="16" id="53U-0v-Apb"/>
+                            <constraint firstAttribute="trailing" secondItem="9Bx-73-SVo" secondAttribute="trailing" constant="32" id="7bH-5q-L9d"/>
                             <constraint firstItem="AIK-dC-0gi" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leading" id="E3j-e7-l4K"/>
+                            <constraint firstItem="bq6-bQ-q15" firstAttribute="leading" secondItem="Agu-Si-HdC" secondAttribute="trailing" constant="16" id="EsC-2o-d2d"/>
                             <constraint firstItem="Djb-ko-YwX" firstAttribute="top" secondItem="AIK-dC-0gi" secondAttribute="bottom" id="Kqv-cz-TO3"/>
                             <constraint firstItem="AIK-dC-0gi" firstAttribute="top" secondItem="L7p-HK-0SC" secondAttribute="bottom" constant="88" id="Ne4-Mg-HEY">
                                 <variation key="heightClass=regular-widthClass=compact" constant="160"/>
                             </constraint>
+                            <constraint firstItem="bq6-bQ-q15" firstAttribute="baseline" secondItem="Agu-Si-HdC" secondAttribute="baseline" id="PpI-Qc-kbo"/>
+                            <constraint firstItem="Agu-Si-HdC" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leading" constant="32" id="ooW-3s-ArF"/>
+                            <constraint firstItem="9Bx-73-SVo" firstAttribute="baseline" secondItem="bq6-bQ-q15" secondAttribute="baseline" id="pQZ-Vi-WmT"/>
                             <constraint firstAttribute="trailing" secondItem="AIK-dC-0gi" secondAttribute="trailing" id="s7k-EK-5Ox"/>
+                            <constraint firstItem="Agu-Si-HdC" firstAttribute="top" secondItem="L7p-HK-0SC" secondAttribute="bottom" constant="32" id="wht-9K-3Ql"/>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="AIK-dC-0gi"/>
+                                <exclude reference="bq6-bQ-q15"/>
+                                <exclude reference="Agu-Si-HdC"/>
+                                <exclude reference="9Bx-73-SVo"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="Kqv-cz-TO3"/>
+                                <exclude reference="ooW-3s-ArF"/>
+                                <exclude reference="wht-9K-3Ql"/>
+                                <exclude reference="EsC-2o-d2d"/>
+                                <exclude reference="PpI-Qc-kbo"/>
                                 <exclude reference="E3j-e7-l4K"/>
                                 <exclude reference="Ne4-Mg-HEY"/>
                                 <exclude reference="s7k-EK-5Ox"/>
+                                <exclude reference="53U-0v-Apb"/>
+                                <exclude reference="7bH-5q-L9d"/>
+                                <exclude reference="pQZ-Vi-WmT"/>
+                                <exclude reference="Kqv-cz-TO3"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="subviews">
                                 <include reference="AIK-dC-0gi"/>
+                                <include reference="bq6-bQ-q15"/>
+                                <include reference="Agu-Si-HdC"/>
+                                <include reference="9Bx-73-SVo"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="Kqv-cz-TO3"/>
+                                <include reference="ooW-3s-ArF"/>
+                                <include reference="wht-9K-3Ql"/>
+                                <include reference="EsC-2o-d2d"/>
+                                <include reference="PpI-Qc-kbo"/>
                                 <include reference="E3j-e7-l4K"/>
                                 <include reference="Ne4-Mg-HEY"/>
                                 <include reference="s7k-EK-5Ox"/>
+                                <include reference="53U-0v-Apb"/>
+                                <include reference="7bH-5q-L9d"/>
+                                <include reference="pQZ-Vi-WmT"/>
+                                <include reference="Kqv-cz-TO3"/>
                             </mask>
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" id="cs8-Y2-yrK"/>
                     <connections>
                         <outlet property="mapView" destination="AIK-dC-0gi" id="Req-z5-6u1"/>
+                        <outlet property="txfAddress" destination="bq6-bQ-q15" id="L05-Ko-iFP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
